HEAD
    + Added support for lucid's ubuntu-vm-builder
    + Autodetect network range in dhcp router configuration
    + Set random network in pppoe router configuration
    + Set domain name servers in dhcp server configuration
    + Use netcat instead of hping for connectivity diagnosis
0.7
    + Added new router types with dhcp and pppoe
    + Added user-extensions and single-window settings for Selenium
    + Now -wait-fail option gives the opportunity of retry a test
    + Added new protocol and firefox-profile settings for Selenium
    + Added precondition attributes (var and eq) to <host> test elements
    + Added <precondition> element to include <test> and <host> only if
    condition is satisfied
    + Bugfix: use flock for allowing only one instance of anste
    + Added name of the user that executed ANSTE on the HTML report
    + Bugfix: missing HTML report generation time
    + Added scripts executed to the test results
0.6
    + Added -break commandline option for setting breakpoints
    + Added suite validation
    + Added warning about running machines