@@ -16,6 +16,7 @@ port = 8000
 port = 8001
 
 [comm]
+iface = anste0
 first-address = 10.6.7.10
 #first-address = 192.168.45.220
 gateway = 10.6.7.1
