@@ -1,4 +1,5 @@
 HEAD
+    + Allow to change name of the communication interface (default: anste0)
     + Added support for lucid's ubuntu-vm-builder
     + Autodetect network range in dhcp router configuration
     + Set random network in pppoe router configuration
